# md2cv

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  md2cv.sh  pyproject.toml  requirements-dev.txt  requirements.txt  sonar-project.properties
.github/workflows/: build.yml  release.yml
app/: __init__.py  cli.py  main.py
app/api/: __init__.py  dependencies.py  routes.py  schemas.py
app/core/: __init__.py  converter.py  exporters.py  parser.py  renderer.py
app/web/: app.js  index.html  style.css
tests/: conftest.py  test_cli.py
tests/api/: test_convert.py  test_cors.py  test_meta_endpoints.py  test_preview.py
tests/fixtures/: bad_yaml.md  minimal_cv.md  no_frontmatter.md
tests/unit/: test_converter.py  test_docx_exporter.py  test_parser.py  test_pdf_exporter.py  test_renderer.py
